# KuiperLLama

./: .gitignore  CMakeLists.txt
kuiper/include/base/: alloc.h  alloc_cpu.h  alloc_cuda.h  base.h  buffer.h
kuiper/include/op/: layer.h
kuiper/include/tensor/: tensor.hpp
kuiper/source/base/: alloc.cpp  alloc_cpu.cpp  alloc_cuda.cpp  buffer.cpp
kuiper/source/op/: layer.cpp
kuiper/source/tensor/: tensor.cpp
test/: CMakeLists.txt
test/test_tensor/: test_buffer.cpp  test_tensor.cpp
